--- a/less/oya-tb-megamenu-beta5.less
+++ b/less/oya-tb-megamenu-beta5.less
@@ -58,6 +58,7 @@
 	& .oya-mm-container {
 		background: rgba(255,255,255,0.9);
 		position: absolute;
+		width: 100%;
 	}
 	& ul.nav {
 		width: 100%;
